# sourced-ai-search

./: .env.example  .gitignore  LICENSE  README.md  main_workflow.py  pyproject.toml
opensearch-cluster/: docker-compose.yml
scripts/: setup-opensearch.ps1  start-opensearch.ps1  stop-opensearch.ps1  teardown.ps1
src/: document_ingestion.py  opensearch_setup.py
src/openai/: __init__.py  web_search.py
src/web_search/: __init__.py  brave_search.py  web_crawler.py
